--- a/index.html
+++ b/index.html
@@ -4,15 +4,83 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + Lit + TS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+  <title>Web Audio API Keyboard</title>
   <link rel="stylesheet" href="./src/index.css" />
-  <script type="module" src="/src/web-audio.ts"></script>
   <script type="module" src="/src/wc-virtual-keyboard.ts"></script>
 </head>
+<style>
+  :root {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
+
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+  }
+
+  a {
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
+  }
+
+  a:hover {
+    color: #535bf2;
+  }
+
+  body {
+    margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: 320px;
+    min-height: 100vh;
+    max-width: 700px;
+    width: 90%;
+  }
+
+  @media (prefers-color-scheme: light) {
+    :root {
+      color: #213547;
+      background-color: #ffffff;
+    }
+  }
+
+</style>
 
 <body>
-  <wc-virtual-keyboard></wc-virtual-keyboard>
+  <section>
+    <h1>About</h1>
+    <p>This is a simple keyboard built with the Web Audio API, RxJS, and Lit.</p>
+    <p>What's cool is that we ar using the <a
+        href="https://developer.mozilla.org/en-US/docs/Web/API/OffscreenCanvas">OffscreenCanvas</a> to render the
+      waveforms here!<br>You can click and use your keyboard to interact.</p>
+  </section>
+  <section>
+    <h1>Keyboard</h1>
+    <wc-virtual-keyboard></wc-virtual-keyboard>
+  </section>
+  <section>
+    <h1>Source Code</h1>
+    <a href="https://github.com/tronicboy1/wc-virtual-keyboard">GitHub</a>
+  </section>
+  <section>
+    <h1>Accredation</h1>
+    <ul>
+      <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API/Visualizations_with_Web_Audio_API">
+          Visualizations with Web Audio API</a></li>
+      <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Audio_API/Simple_synth">
+          Example and tutorial: Simple synth keyboard</a></li>
+    </ul>
+  </section>
 </body>
 
 </html>
