--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
   <section>
     <h1>About</h1>
     <p>This is a simple keyboard built with the Web Audio API, RxJS, and Lit.</p>
-    <p>What's cool is that we ar using the <a
+    <p>What's cool is that we are using the <a
         href="https://developer.mozilla.org/en-US/docs/Web/API/OffscreenCanvas">OffscreenCanvas</a> to render the
-      waveforms here!<br>You can click and use your keyboard to interact.</p>
+      waveforms here!<br>kl;:]You can click and use your keyboard to interact.</p>
   </section>
   <section>
     <h1>Keyboard</h1>
